--- a/views/pages/shop.ejs
+++ b/views/pages/shop.ejs
@@ -42,7 +42,7 @@
                             </div>
                             <div class="product-content-wrap">
                                <div class="product-content">
-                                  <p><a href="shop-details.html"><%= listProduct[i].title %> <br>(1kg)</a>
+                                  <p><a href="/customers/chi-tiet-san-pham?productID=<%= listProduct[i]._id %>"><%= listProduct[i].title %> <br>(1kg)</a>
                                   </p>
                                </div>
                                <div class="product-action">
@@ -117,12 +117,12 @@
                             <div class="col-xl-4 col-lg-6 col-sm-6">
                                 <div class="product">
                                    <div class="product-img-wrap">
-                                      <img src="/assets/img/product/product20.png" alt="img">
-                                      <button  id="quickViews" class="quick-view btnQuickView" _categoryID="<%= infoCategory._id %>" _productID = "<%=item._id%>" type="button" data-toggle="modal" data-target="#quick-view">Quick View</button>
+                                    <img src="/assets/img/product/product20.png" alt="img">
+                                    <button  id="quickViews" class="quick-view btnQuickView" _categoryID="<%= infoCategory._id %>" _productID = "<%=item._id%>" type="button" data-toggle="modal" data-target="#quick-view">Quick View</button>
                                    </div>
                                    <div class="product-content-wrap">
                                       <div class="product-content">
-                                         <p><a href="shop-details.html"><%= item.title %><br>(1 kg)</a></p>
+                                         <p><a href="/customers/chi-tiet-san-pham?productID=<%= item._id %>"><%= item.title %><br>(1 kg)</a></p>
                                       </div>
                                       <div class="product-action">
                                          <a href="#" class="add-to-btn small-btn">
@@ -133,12 +133,12 @@
                                          <div class="add-wishlist">
                                             <i class="fa fa-heart-o"></i>
                                          </div>
-                                      </div>
-                                   </div>
-                                </div>
-                             </div>
-                            <%})%>
-                    <%}else{%>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                           <%})%>
+                     <%}else{%>
                      <%listProduct.forEach(item => {%>
                            <div class="col-xl-4 col-lg-6 col-sm-6">
                               <div class="product">
@@ -148,7 +148,7 @@
                                  </div>
                                  <div class="product-content-wrap">
                                     <div class="product-content">
-                                       <p><a href="shop-details.html"><%= item.title %><br>(1 kg)</a></p>
+                                       <p><a href="/customers/chi-tiet-san-pham?productID=<%= item._id %>"><%= item.title %><br>(1 kg)</a></p>
                                     </div>
                                     <div class="product-action">
                                        <a href="#" class="add-to-btn small-btn">
@@ -165,19 +165,19 @@
                            </div>
                            <%})%>
                            <%}%>
-                   <div class="modal product-modal fade" id="quick-view" tabindex="-1" role="dialog" aria-hidden="true">
-                      <div class="modal-dialog" role="document">
-                         <div class="modal-content">
-                            <div class="modal-header">
+                  <div class="modal product-modal fade" id="quick-view" tabindex="-1" role="dialog" aria-hidden="true">
+                     <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                           <div class="modal-header">
                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                <span aria-hidden="true">&times;</span>
                                </button>
                             </div>
-                            <%if(infoProduct && infoProduct.length){%>
                            <div class="modal-body p-35 pt-0">
                               <div class="product-quick-view">
                                  <div class="container">
                                        <div class="row">
+                                          
                                           <div class="col-lg-6">
                                              <div class="product-preview-wrap">
                                                 <div class="tab-content bg-white p-50 b1 br-5">
@@ -218,9 +218,15 @@
                                                 </ul>
                                              </div>
                                           </div>
+                                          
                                           <div class="col-lg-6">
-                                             <div class="product-details text-left bg-white ml-25 px-50 py-45 b1 br-5">
-                                                <h3 class="mb-25 rmt-25"><%=infoProduct.title%>></h3>
+                                             <div  class="product-details text-left bg-white ml-25 px-50 py-45 b1 br-5">
+                                                <%let infoProductData = infoProduct %>
+                                                <%console.log({infoProductData})%>
+                                                <%if(infoProductData && infoProductData.length){%>
+                                                <h3 class="mb-25 rmt-25"> <%= infoProductData.title %> </h3>
+
+                                                <%}%>
                                                 <div class="rating mb-25">
                                                    <div class="star mr-15">
                                                       <i class="fa fa-star"></i>
@@ -234,7 +240,7 @@
                                                 <p>Sed egestas, ante et vulputate volutpat, eropede semper est, vitluctus metus libero eu augue. Morbi purus libero, faucibus adipiscing.</p>
                                                 <p>commodo quis, gravida id, est. Sed lectus. Praest elemhendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat.lacus a ultrices.</p>
                                                 <h6>Availability: <span>In Stock</span></h6>
-                                                <h4 class="price"><%= infoProduct.salePrice%>></h4>
+                                                <h4 class="price"> HAHAA </h4>
                                                 <div class="product-spinner mt-20">
                                                    <div class="number-input b1">
                                                       <button class="minus"></button>
@@ -248,21 +254,19 @@
                                                 </div>
                                              </div>
                                           </div>
-                                       </div>
-                                    <%}%>
-                                     
-                                  </div>
-                               </div>
-                            </div>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
- </section>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
 <%- include('../partials/footer.ejs') -%>
 <script>
    $(document).on('click', '.btnQuickView', function(e){
@@ -271,94 +275,23 @@
       let categoryID = $('#quickViews').attr('_categoryID');
       console.log({productID});
       console.log({categoryID});
+      
       $.ajax({
          url:`/customers/danh-sach-san-pham?id=${categoryID}`,
          method:'GET',
          data: {productID},
          success: resp =>{
-            console.log({productID});
             let resultArr = resp.data;
             console.log(resultArr);
             if(!resp.error){
-               $('#quick-view .modal-body').find('row').append(`
-                  <div class="col-lg-6">
-                     aaaa
-                  </div>
+               $('#quick-view .modal-body .row').find('product-details').append(`
+                  
                `)
-               alert('aaaa');
-               //                            <div class="col-lg-6">
-               //                               <div class="product-preview-wrap">
-               //                                  <div class="tab-content bg-white p-50 b1 br-5">
-               //                                     <div class="tab-pane" id="preview1">
-               //                                        <img src="/assets/img/product/product24.png" alt="Product Preview Image" data-magnify-src="/assets/img/product/product23.png" />
-               //                                     </div>
-               //                                     <div class="tab-pane active" id="preview2">
-               //                                        <img src="/assets/img/product/product23.png" alt="Product Preview Image" data-magnify-src="/assets/img/product/product23.png" />
-               //                                     </div>
-               //                                     <div class="tab-pane" id="preview3">
-               //                                        <img src="/assets/img/product/product23.png" alt="Product Preview Image" data-magnify-src="/assets/img/product/product23.png" />
-               //                                     </div>
-               //                                     <div class="tab-pane" id="preview4">
-               //                                        <img src="/assets/img/product/product23.png" alt="Product Preview Image" data-magnify-src="/assets/img/product/product23.png" />
-               //                                     </div>
-               //                                  </div>
-               //                                  <ul class="nav nav-tabs flex-nowrap align-content-between mt-30">
-               //                                     <li>
-               //                                        <a data-toggle="tab" href="#preview1">
-               //                                        <img src="/assets/img/product/product23.png" alt="Product Thumbnail Image" />
-               //                                        </a>
-               //                                     </li>
-               //                                     <li>
-               //                                        <a class="active" data-toggle="tab" href="#preview2">
-               //                                        <img src="/assets/img/product/product23.png" alt="Product Thumbnail Image" />
-               //                                        </a>
-               //                                     </li>
-               //                                     <li>
-               //                                        <a data-toggle="tab" href="#preview3">
-               //                                        <img src="/assets/img/product/product23.png" alt="Product Thumbnail Image" />
-               //                                        </a>
-               //                                     </li>
-               //                                     <li>
-               //                                        <a data-toggle="tab" href="#preview4">
-               //                                        <img src="/assets/img/product/product23.png" alt="Product Thumbnail Image" />
-               //                                        </a>
-               //                                     </li>
-               //                                  </ul>
-               //                               </div>
-               //                            </div>
-               //                            <div class="col-lg-6">
-               //                               <div class="product-details text-left bg-white ml-25 px-50 py-45 b1 br-5">
-               //                                  <h3 class="mb-25 rmt-25">Fresh Onion 1kg</h3>
-               //                                  <div class="rating mb-25">
-               //                                     <div class="star mr-15">
-               //                                        <i class="fa fa-star"></i>
-               //                                        <i class="fa fa-star"></i>
-               //                                        <i class="fa fa-star"></i>
-               //                                        <i class="fa fa-star"></i>
-               //                                        <i class="fa fa-star"></i>
-               //                                     </div>
-               //                                     <div class="text">(13 Review)</div>
-               //                                  </div>
-               //                                  <p>Sed egestas, ante et vulputate volutpat, eropede semper est, vitluctus metus libero eu augue. Morbi purus libero, faucibus adipiscing.</p>
-               //                                  <p>commodo quis, gravida id, est. Sed lectus. Praest elemhendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat.lacus a ultrices.</p>
-               //                                  <h6>Availability: <span>In Stock</span></h6>
-               //                                  <h4 class="price">$120.00</h4>
-               //                                  <div class="product-spinner mt-20">
-               //                                     <div class="number-input b1">
-               //                                        <button class="minus"></button>
-               //                                        <input min="1" name="quantity" value="2" type="number">
-               //                                        <button class="plus"></button>
-               //                                     </div>
-               //                                     <a href="#" class="theme-btn br-30 ml-20">Add to Cart</a>
-               //                                     <div class="add-wishlist">
-               //                                        <i class="fa fa-heart-o"></i>
-               //                                     </div>
-               //                                  </div>
-               //                            </div>
-               $('#quick-view .modal-body').modal('show');
+               
             }else{
                alert('bbb');
             }
+
    //       $('#quick-view .modal-body').find('row').empty()
    //          if(resultArr && resultArr.length){
    //          resultArr.forEach(result => {
