--- a/views/dashboards/partials/side-bar.ejs
+++ b/views/dashboards/partials/side-bar.ejs
@@ -5,7 +5,7 @@
         <p class="centered"><a href="profile.html"><img src="/dashboards/img/ui-sam.jpg" class="img-circle" width="80"></a></p>
         <h5 class="centered"><%= infoUser.name %></h5>
         <li class="mt">
-          <a class="active" href="index.html">
+          <a class="active" href="/dashboards/">
             <i class="fa fa-dashboard"></i>
             <span>Dashboard</span>
             </a>
@@ -18,8 +18,7 @@
           <ul class="sub">
             <li><a href="/categorys/list">Danh sách</a></li>
             <li><a href="/categorys/add-category">Thêm danh mục</a></li>
-            <li><a href="panels.html">Panels</a></li>
-            <li><a href="font_awesome.html">Font Awesome</a></li>
+
           </ul>
         </li>
         <li class="sub-menu">
@@ -30,11 +29,7 @@
           <ul class="sub">
             <li><a href="/promotions/danh-sach-khuyen-mai">Danh sách</a></li>
             <li><a href="/promotions/add-promotion">Thêm khuyến mãi</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="todo_list.html">Todo List</a></li>
-            <li><a href="dropzone.html">Dropzone File Upload</a></li>
-            <li><a href="inline_editor.html">Inline Editor</a></li>
-            <li><a href="file_upload.html">Multiple File Upload</a></li>
+            
           </ul>
         </li>
         <li class="sub-menu">
@@ -45,25 +40,18 @@
           <ul class="sub">
             <li><a href="/products/list">Danh sách</a></li>
             <li><a href="/products/add-product">Thêm sản phẩm</a></li>
-            <li><a href="lock_screen.html">Lock Screen</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="invoice.html">Invoice</a></li>
-            <li><a href="pricing_table.html">Pricing Table</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="404.html">404 Error</a></li>
-            <li><a href="500.html">500 Error</a></li>
+          
           </ul>
         </li>
         <li class="sub-menu">
           <a href="javascript:;">
             <i class="fa fa-tasks"></i>
-            <span>Forms</span>
+            <span>Order</span>
             </a>
           <ul class="sub">
-            <li><a href="form_component.html">Form Components</a></li>
-            <li><a href="advanced_form_components.html">Advanced Components</a></li>
-            <li><a href="form_validation.html">Form Validation</a></li>
-            <li><a href="contactform.html">Contact Form</a></li>
+            <li><a href="/orders/list">Danh sách</a></li>
+            <li><a href="/orders/add-order">Advanced Components</a></li>
+
           </ul>
         </li>
         <li class="sub-menu">
